Spark(wordcount & log analysis)/mark_output.txt
====word count====
unfound: word_count.py
====log analysis====
====word count====
  File "/home/autograder-package/comp4651-autograder/assignment-4-bak/assignment-4-Jaehwan0/word_count_test.py", line 491
    top10WordsAndCounts = <FILL IN>
                          ^
SyntaxError: invalid syntax
====log analysis====
Number of invalid logline: 3
Invalid logline: 204.120.229.63 - - [01/Jul/1995:04:29:05 -0400] "GET /history/history.html                                                 hqpao/hqpao_home.html HTTP/1.0" 200 1502
Invalid logline: nccse.gsfc.nasa.gov - - [01/Jul/1995:07:36:13 -0400] "GET /shuttle/missions/missions.html Shuttle Launches from Kennedy Space Center HTTP/1.0" 200 8677
Invalid logline: ix-nbw-nj1-22.ix.netcom.com - - [01/Jul/1995:10:42:09 -0400] "GET /finger @net.com HTTP/1.0" 404 -
Read 43177 lines, successfully parsed 43174 lines, failed to parse 3 lines
Read 43177 lines, successfully parsed 43177 lines, failed to parse 0 lines
1 test passed.
1 test passed.
1 test passed.
Content Size Avg: 24992, Min: 0, Max: 1646592
Found 4 response codes
Response Code Counts: [(200, 38606), (304, 2631), (404, 206), (302, 1734)]
1 test passed.
1 test passed.
[200, 304, 404, 302]
[0.89413345067976002, 0.060935220140352506, 0.0047710586654932021, 0.04016027051439424]
Any 20 hosts that have accessed more then 10 times: [u'drjo002a099.embratel.net.br', u'n2o.phantom.com', u'sl137.active.ch', u'ppp179.aix.or.jp', u'168.95.123.108', u'ix-tam1-26.ix.netcom.com', u'ppp010.st.rim.or.jp', u'buffnet5.buffnet.net', u'129.11.224.6', u'node156.silcom.com', u'simonb.hip.cam.org', u's254n068ppp49.csun.edu', u'eic66.fiu.edu', u'cygnus.omsi.edu', u'sbd0124.deltanet.com', u'hub10.hub.co.uk', u'ix-sac2-02.ix.netcom.com', u'ix-pl1-27.ix.netcom.com', u'205.233.242.127', u'ip217.pom.primenet.com']
Top Ten Endpoints: [(u'/images/NASA-logosmall.gif', 2752), (u'/images/KSC-logosmall.gif', 2392), (u'/shuttle/countdown/count.gif', 1809), (u'/shuttle/countdown/', 1798), (u'/shuttle/missions/sts-71/sts-71-patch-small.gif', 1092), (u'/images/ksclogo-medium.gif', 1049), (u'/images/MOSAIC-logosmall.gif', 1049), (u'/images/USA-logosmall.gif', 1048), (u'/images/WORLD-logosmall.gif', 1024), (u'/images/launch-logo.gif', 973)]
1 test passed.
Top Five failed URLs: [(u'/images/NASA-logosmall.gif', 468), (u'/images/KSC-logosmall.gif', 294), (u'/shuttle/countdown/liftoff.html', 199), (u'/shuttle/countdown/', 141), (u'/shuttle/countdown/count.gif', 140)]
1 test passed.
1 test passed.
Unique hosts: 3597
1 test passed.
Unique hosts per hour: [(0, 378), (1, 329), (2, 263), (3, 194), (4, 179), (5, 156), (6, 165), (7, 170), (8, 211), (9, 245), (10, 328), (11, 323), (12, 280), (13, 306), (14, 317), (15, 351), (16, 362), (17, 112)]
1 test passed.
1 test passed.
1 test passed.
1 test passed.
1 test passed.
Average number of hourly requests per Hosts is [(0, 9), (1, 9), (2, 8), (3, 8), (4, 8), (5, 8), (6, 9), (7, 9), (8, 9), (9, 8), (10, 9), (11, 10), (12, 9), (13, 10), (14, 9), (15, 9), (16, 8), (17, 6)]
1 test passed.
1 test passed.
1 test passed.
1 test passed.
Found 206 404 URLs
1 test passed.
1 test passed.
404 URLS: [u'/shuttle/missions/sts-71/images/KSC-95EC-0916.txt', u'/history/apollo/pad-abort-test-1/news/', u'/shuttle/missions/sts-71/image/', u'/history/apollo/pad-abort-test-1/movies/', u'/lcc.jpg', u'/shuttle/missions/sts-86/mission-sts-86.html', u':/facilities/tour.html', u'/images/home_igloo.gif', u'/payloads/systems.html', u'/shuttle/missions/sts-80/mission-sts-80.html', u'/history/apollo/pad-abort-test-1/docs/', u'/://spacelink.msfc.nasa.gov', u'/people/nasa-cm/jmd.html', u'/shuttle/missions/sts-71/images/KSC-95EC-0889.jpg', u'/history/history.hrml', u'/shuttle/missions/sts-79/mission-sts-79.html', u'/mdss/ped/acs/MDSS.html', u'/news/sci.space.shuttle/archive/sci-space-shuttle-22-apr-1995-40.txt', u'/:/spacelink.msfc.nasa.gov', u'/software/techdoc/td-2.3.html', u'/shuttle/missions/sts-77/sts-77-press-kit.txt', u'/shuttle/missions/sts-XX/mission-sts-XX.html', u'/misc/home.map?44,104', u'/shuttle/missions/sts-68/ksc-upclose.gif', u'/ksc/', u'/shuttle/mirvis.html', u'/count.gif', u'/persons/astronauts/q-to-t/TrulyRH.txt', u'/ads/eds2_ad.gif', u'/Business/']
1 test passed.
Top Ten 404 URLs: [(u'/pub/winvn/readme.txt', 20), (u'/pub/winvn/release.txt', 19), (u'/shuttle/missions/sts-71/images/KSC-95EC-0916.txt', 14), (u'/shuttle/resources/orbiters/atlantis.gif', 13), (u'/history/apollo/publications/sp-350/sp-350.txt~', 12), (u'/://spacelink.msfc.nasa.gov', 5), (u'/misc/showcase/personal_edition/images/milan_banner.gif', 5), (u'/people/nasa-cm/jmd.html', 4), (u'/shuttle/missions/sts-XX/mission-sts-XX.html', 4), (u'/shuttle/missions/sts-68/ksc-upclose.gif', 4)]
1 test failed. incorrect badEndpointsTop20
Top hours for 404 requests: [(0, 24), (1, 10), (2, 12), (3, 16), (4, 10), (5, 9), (6, 4), (7, 2), (8, 6), (9, 3), (10, 13), (11, 23), (12, 10), (13, 13), (14, 19), (15, 17), (16, 14), (17, 1)]
1 test passed.
1 test passed.
[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17]
[24, 10, 12, 16, 10, 9, 4, 2, 6, 3, 13, 23, 10, 13, 19, 17, 14, 1]
1 test passed.
1 test passed.
